# Projects

./: .gitignore  README.md
Data_Bottleneck/: README.md
enery_in seatle/: ok.ipynb  p10.ipynb  pyproject.toml  toolbox.py
p5/: pyproject.toml
scoring-model/: pyproject.toml
scoring-model/models/: reg_logistic_defaut.sav
scoring-model/notebooks/: cleaning.ipynb  modeling.ipynb  toolbox.py
scoring-model/notebooks/mlruns/0/: meta.yaml
scoring-model/notebooks/mlruns/842670162452463709/: meta.yaml
scoring-model/notebooks/mlruns/842670162452463709/16306812b6064abe89704c809f2e877d/: meta.yaml
scoring-model/notebooks/mlruns/842670162452463709/16306812b6064abe89704c809f2e877d/artifacts/: estimator.html
scoring-model/notebooks/mlruns/842670162452463709/57ec8a904bcf428fab26faafa95356d1/: meta.yaml
scoring-model/notebooks/mlruns/842670162452463709/5c4a283bc494417e8e27634ca84576f0/: meta.yaml
scoring-model/notebooks/mlruns/842670162452463709/63785a5b3ca14ecb9b0fac315ea820ed/: meta.yaml
scoring-model/notebooks/mlruns/842670162452463709/64f7b104b4c3408aa45ff04e68ed70af/: meta.yaml
scoring-model/notebooks/mlruns/842670162452463709/94dd11401c1649d5b5c9a26e431638bd/: meta.yaml
scoring-model/notebooks/mlruns/842670162452463709/c5bd2560b22a4ae1885c98014418c3a7/: meta.yaml
scoring-model/notebooks/mlruns/842670162452463709/c8f3b1735c814d9eacf0608a3dca1692/: meta.yaml
scoring-model/notebooks/mlruns/842670162452463709/cc7d54cd44924685bf4807fa74262fc3/: meta.yaml
scoring-model/notebooks/mlruns/842670162452463709/dbe4fe7ffafd4ab0ae33225ace5b978d/: meta.yaml
(+125 files in other folders)
