[tool.poetry]
name = "scoring-model"
version = "0.1.0"
description = ""
authors = ["Alhassanne <alhassanne.ahmed@servier.com>"]
readme = "README.md"
packages = [{include = "scoring_model"}]

[tool.poetry.dependencies]
python = ">=3.9,<4"
seaborn = "^0.12.2"
ipykernel = "^6.22.0"
yellowbrick = "^1.5"
plotly = "^5.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
